--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ services:
   - docker
 
 script:
+    - rvm use default
+    - ruby -v
+    - cd backend
     - docker build -t backend .
     - docker images backend
