add bug ci and push on hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ script:
 
     - docker build -t backend .
     - docker images backend
+
+before_deploy: 
+    - docker login -u Junior Messan -p AZemmanuel20
+
+deploy:
+     provider: script
+     script: docker push backend
+     on:
+        branch: main
