--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
     - docker images backend
 
 before_deploy: 
-    - docker login -u messanemmanuel --password-stdin
+    - docker login -u messanemmanuel -p AZemmanuel20
 
 deploy:
      provider: script
