--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ before_deploy:
 
 deploy:
   provider: script
-  script: docker push messanemmanuel/backend:latest
+  script:
+   
+    docker push messanemmanuel/backend;
+    
   on:
     branch: main
 
